# BeyondFlat

./: .gitignore  CMakeLists.txt  README.md  build_release.ps1  build_relwithdebinfo.ps1
cli/: cagd_cli.cc  cagd_cli.h  cagd_cli_types.h
cli/bezier/: curve_cli.h
cli/bspline/: curve_cli.h
cli/common/: glmath_cli.h  utils_cli.h
cli/nurbs/: curve_cli.h
cli/surfaces/: surface_cli.h
docs/: bezier-curve.md  bezier-surface.md  bspline-curve.md  nurbs-curve.md
src/: CMakeLists.txt  cagd_core.cc  cagd_core.h  cagd_types.h  linear_lib.cc  linear_lib.h
src/bezier/: bezier_curve.cc  bezier_curve.h  bezier_surface.cc  bezier_surface.h
src/bspline/: bspline_curve.cc  bspline_curve.h
src/common/: common.cc  common.h  glmath.cc  glmath.h
src/nurbs/: nurbs_curve.cc  nurbs_curve.h
viewer/: CMakeLists.txt  main.cc
viewer/app/: application.cc  application.h
viewer/base/: curve_editor.h  curve_renderer.h
viewer/editors/: bezier_editor.cc  bezier_editor.h
viewer/framework/: application.cc  application.h
viewer/framework/base/: curve_editor.h  editor_base.h
viewer/framework/gl/: camera.cc  camera.h  renderer.cc  renderer.h  viewport.cc  viewport.h
viewer/gui/: bezier_editor.cc  bezier_editor.h
viewer/impl/bezier/: curve_editor.cc  curve_editor.h  surface_editor.cc  surface_editor.h
viewer/impl/bspline/: curve_editor.cc  curve_editor.h
viewer/impl/nurbs/: curve_editor.cc  curve_editor.h
viewer/render/: bezier_renderer.cc  bezier_renderer.h
